# platform.core.connectivity.wifi-direct-manager

./: AUTHORS  CMakeLists.txt  LICENSE  NOTICE  project.config  tags  wifi-direct-manager.manifest  wifi-direct-plugin-wpasupplicant.manifest
debian/: changelog  control  copyright  rules  wifi-direct-manager.install.in.i386  wifi-direct-manager.postinst  wifi-direct-plugin-broadcom.install.in.armel  wifi-direct-plugin-broadcom.install.in.i386  wifi-direct-plugin-wpasupplicant.install.in
files/: dhcpd-notify.sh  dhcpd-notify.sh.in  dhcpd.conf  dhcpd.conf.in  dhcpd.eth.conf  dhcpd.p2p.conf  dhcpd.wl0.conf  p2p_supp.conf  p2p_supp.conf.in  p2p_supp.sh  p2p_supp.sh.in  p2p_supp_tv.conf  p2p_suppl.conf  p2p_supplicant  udhcp_script.non-autoip  udhcp_script.non-autoip.in  wifi-direct-dhcp.sh  wifi-direct-dhcp.sh.in  wifi-direct-server.sh  wifi-direct-server.sh.in
files/TM1/: dhcpd.p2p.conf  p2p_supp.conf  wifi-direct-dhcp.sh
files/bundle/: dhcpd.p2p.conf  p2p_supp.conf  wifi-direct-dhcp.sh
files/common/: ccode.conf  dhcpd-notify.sh  dhcpd.p2p.conf  p2p_supp.sh  p2p_supplicant  wfd-manager.conf  wifi-direct-dhcp.sh  wifi-direct-server.sh
files/tv/: dhcpd.p2p.conf  p2p_supp.conf  wifi-direct-dhcp.sh
include/: wifi-direct-asp.h  wifi-direct-client.h  wifi-direct-dbus.h  wifi-direct-error.h  wifi-direct-event.h  wifi-direct-group.h  wifi-direct-iface.h  wifi-direct-ipc.h  wifi-direct-log.h  wifi-direct-manager.h  wifi-direct-peer.h  wifi-direct-service.h  wifi-direct-session.h  wifi-direct-state.h  wifi-direct-util.h
oem/: wifi-direct-oem.c  wifi-direct-oem.h
oem/include/: wifi-direct-oem.h
packaging/: dbus-wfd-manager.conf  net.wifidirect.service  wifi-direct-manager.changes  wifi-direct-manager.service  wifi-direct-manager.spec  wifi-direct-manager.spec~
plugin/wpasupplicant/: CMakeLists.txt  wfd-plugin-wpasupplicant-emul.c  wfd-plugin-wpasupplicant.c  wfd-plugin-wpasupplicant.h
plugin/wpasupplicant/ctrl_iface_dbus/: CMakeLists.txt  wfd-plugin-wpasupplicant.c
plugin/wpasupplicant/ctrl_iface_dbus/dbus/: wfd-plugin-supplicant-dbus.c  wfd-plugin-supplicant-dbus.h
plugin/wpasupplicant/ctrl_iface_dbus/include/: wfd-plugin-log.h  wfd-plugin-wpasupplicant.h
plugin/wpasupplicant/ctrl_iface_sock/: CMakeLists.txt  wfd-plugin-wpasupplicant.c
plugin/wpasupplicant/ctrl_iface_sock/include/: wfd-plugin-wpasupplicant.h
plugin/wpasupplicant/emul/: CMakeLists.txt  wfd-plugin-wpasupplicant-emul.c
plugin/wpasupplicant/emul/include/: wfd-plugin-wpasupplicant.h
plugin/wpasupplicant/include/: wifi-direct-wpasupplicant.h
plugin/wpasupplicant/src/: wifi-direct-plugin-emul.c  wifi-direct-plugin.c
src/: .wifi-direct-manager.c.swp  CMakeLists.txt  wifi-direct-asp.c  wifi-direct-client-handler.c  wifi-direct-client.c  wifi-direct-dbus.c  wifi-direct-dhcp.c  wifi-direct-error.c  wifi-direct-event-handler.c  wifi-direct-event.c  wifi-direct-group.c  wifi-direct-iface.c  wifi-direct-main.c  wifi-direct-manager.c  wifi-direct-peer.c  wifi-direct-service.c  wifi-direct-session.c  wifi-direct-state.c  wifi-direct-stub.c  wifi-direct-util.c  wifi-direct-utils.c
src/include/: wifi-direct-client-handler.h  wifi-direct-event-handler.h  wifi-direct-service.h  wifi-direct-stub.h  wifi-direct-utils.h
