CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(wifi-direct-plugin-wpasupplicant C)

# Set required packages
INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED wifi-direct vconf glib-2.0 dbus-1 dbus-glib-1 gthread-2.0 dlog)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag} -g -DUSE_DLOG")
ENDFOREACH(flag)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include
		${CMAKE_SOURCE_DIR}/oem/include
		${CMAKE_SOURCE_DIR}/src/include)

SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS} -Wall")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")

ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")


EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" MATCHES "^arm.*")

	SET(SRCS 
		src/wifi-direct-plugin.c
	)

        MESSAGE("Build for Target")

	# library build
	ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS})
	#SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION 0.1.0)
	SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "" OUTPUT_NAME ${PROJECT_NAME})

	# install
	INSTALL(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)

ELSE()

	SET(SRCS 
		src/wifi-direct-plugin-emul.c
	)

        MESSAGE("Build for Emulator")

	# library build
	ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS})
	#SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION 0.1.0)
	SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "" OUTPUT_NAME ${PROJECT_NAME})

	# install
	INSTALL(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)

ENDIF()

